# vkgates

./: .dockerignore  .env_variable  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Readme.md
.github/workflows/: build.yml  release.yml  rust.yml
src/: bot.rs  config.rs  deserialize_callback.rs  endpoints.rs  main.rs  vkhandler.rs
src/attachments/: photo.rs
