[package]
name = "vkapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenv = "0.15.0"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
teloxide = "0.12.2"
