[package]
name = "vkgates"
version = "1.0.0"
edition = "2021"
license = "MIT"

[dependencies]
actix-web = "4.4.1"
clap = { version = "4.4.11", features = ["derive", "env"] }
dotenv = "0.15.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
teloxide = "0.12.2"
url = "2.5.0"
actix-web-prom = { version = "0.7.0", optional = true }
uuid = { version = "1.6.1", features = ["v4"] }

[features]
default = []
prometheus = ["dep:actix-web-prom"]
